<resources>
    <string name="app_name">Заметки</string>
    <string name="btnBack">Назад</string>
    <string name="Search">Искать</string>
    <string name="Sort">Сортировать</string>
    <string name="about_developers">О разработчиках </string>
    <string name="navigation_drawer_open">Открытие</string>
    <string name="navigation_drawer_close">Зактырие</string>
    <string name="header_title">Вася</string>
    <string name="status">Студент</string>
    <string name="about">О программе</string>
    <string name="exit">Закрыть боковую панель</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="OK">Применить</string>
    <string name="Title">О программе</string>
    <string name="version">Программа создана Василием. Version v.2.1</string>
    <string name="ok">OK</string>
    <string name="subtitle">Ваши заметки</string>
    <string name="Send_note">Отослать заметку</string>
    <string name="Add_photo">Добавить фото</string>
    <string name="setting">Настройки</string>
    <string name="delete_str">Удалить заметку</string>
    <string name="correct_str">Корректировть</string>

    <string name="titleChangeColor">Поменять цвет</string>
    <string name="titleChangeTextSize">Поменять размер шрифта</string>
    <string name="add_note">add</string>
    <string name="correction_message">Скорректируйте название заметки</string>
    <string name="name_of_user">Имя пользлвателя</string>
    <string name="profession">Род деятельности</string>
    <string name="apply">Применить</string>
    <string name="exit_question">Вы уврены,что хотите закрыть программу ?</string>
    <string name="Notes_were_closed">Приложенине блокнот закрыто.</string>
    <string name="Notes_program">Программа блокнот</string>
    <string name="exit_alert_dialog">ВЫХОД</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="Exit_from_notes">Выход</string>
    <string name="Current_time_date">Текущее время и дата</string>
    <string name="Current_date_time">Текущее время и дата</string>
    <string name="choose_theme_of_application">ВЫБЕРИТЕ ТЕМУ ПРИЛОЖЕНИЯ</string>
    <string name="add2">Добавить2</string>
    <string name="Change_theme">Поменять тему</string>
    <string name="cancel">Отмена</string>
    <string name="correct_name">Поменяйте...</string>
    <string name="clear">Очистить</string>
    <string name="add">Добавить</string>
    <string name="update">Изменить</string>
    <string name="delete">Удалить</string>
    <string name="correct_title">Скорректируйте заголовок</string>
    <string name="empty">Пустая база данных</string>
    <string name="error">Ошибка</string>
    <string name="send_to_firebase">Переслать в Firebase</string>
    <string name="obtain_from_firebase">Загрузить из Firebase</string>
    <string name="success_send_to_firebase">Заметки переслали в Firebase</string>
    <string name="error_send_to_firebase">Ошибка. Заметки не переслали в Firebase</string>
    <string name="obtain_from_Firebase">Заметки получили из Firebase</string>
    <string name="error_obtain_from_Firebase">Ошибка. Заметки не получили из Firebase</string>

    <style name="StyleText">
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textSize">@dimen/text_size</item>
    </style>

    <style name="StylePicker">

        <item name="android:layout_width">wrap_content</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:layout_gravity">center</item>
        <item name="android:background">@color/color_time_date</item>
        <item name="android:textColor">@color/black</item>

    </style>
</resources>