<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="10"
        android:title="@string/add"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_clear"
        android:icon="@android:drawable/ic_notification_clear_all"
        android:orderInCategory="10"
        android:title="@string/clear"
        app:showAsAction="always" />
    <item
        android:id="@+id/send_to_firebase"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="10"
        android:title="@string/send_to_firebase"
        app:showAsAction="never" />
    <item
        android:id="@+id/obtain_from_firebase"
        android:icon="@android:drawable/ic_notification_clear_all"
        android:orderInCategory="10"
        android:title="Загрузить из Firebase"
        app:showAsAction="never" />
</menu>