<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/holo_orange_dark"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/text_size">

    <TextView
        android:id="@+id/correct_name_prof"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correct_name"
        android:textColor="@color/set_text_block"
        android:textSize="@dimen/text_size" />

    <Button
        android:id="@+id/btn_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_of_user" />

    <Button
        android:id="@+id/btn_profession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profession"
        app:layout_constraintTop_toBottomOf="@+id/btnOk" />

</LinearLayout>